Fixed z-index issue with nav bar.

--- a/css/style.css
+++ b/css/style.css
@@ -135,7 +135,7 @@ a:hover {
     top: 0;
     left: 0;
 
-    z-index: 3;
+    z-index: 4;
 }
 
 .menu-container {
@@ -143,7 +143,7 @@ a:hover {
     top: 0;
     right: 0;
     margin: 5px 5px 0px 0px;
-    z-index: 3;
+    z-index: 4;
     font-size: 24px;
     cursor: pointer;
 }
@@ -171,10 +171,10 @@ a:hover {
 
 @media screen and (min-width: 821px) {
     .logo-container {
-        margin: 50px 0 0 60px;
+        margin: 25px 0 0 30px;
     }
     .menu-container {
-        margin: 50px 60px 0px 0px;
+        margin: 25px 30px 0px 0px;
         font-size: 45px;
     }
 }
@@ -197,7 +197,7 @@ a:hover {
 
     animation: fadeOut 0.5s ease-out;
 
-    z-index: 2;
+    z-index: 3;
 }
 
 .navbar ul {
